[package]
name = "nft_image_proxy"
version = "2.0.0"
repository = "https://github.com/Cryptonomic/ImageProxy"
authors = ["Cryptonomic Inc."]
edition = "2018"
build = "build.rs"
include = [ "src/" ]

[build-dependencies]
built = { version = "0.5", features = ["git2"] }

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-timeout = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
log4rs = "1"
hocon = "0.9"
sha2 = "0.10"
base64 = "0.21"
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = {version="0.4",default-features = false, features = ["alloc", "serde"]}
uuid = { version = "1.1", features = ["serde", "v4"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
async-trait = "0.1"
image = "0.24"
dns-lookup = "1"
anyhow = "1.0"
moka = "0.9.6"

# deps for db support
bb8 = "0.8"
bb8-postgres = "0.8"
deadpool-postgres = "0.10"
postgres-native-tls = "0.5"
native-tls = "0.2"
tokio-postgres = { version="0.7", features=["with-chrono-0_4"] }

# deps for aws
aws-config = "0.54"
aws-sdk-rekognition = "0.24"
aws-sdk-s3 = "0.24"
aws-types = "0.54"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version="0.5", features=[ "background_threads_runtime_support", "background_threads"] }

[dev-dependencies]
rand = "0.8.4"

[profile.release]
lto = true

[features]