[package]
name = "nft_image_proxy"
version = "2.0.0"
repository = "https://github.com/Cryptonomic/ImageProxy"
authors = ["Cryptonomic Inc."]
edition = "2018"
build = "build.rs"
include = [ "src/" ]

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }

[dependencies]
hyper = { version = "1.1.0", features = ["full"] }
hyper-timeout = "0.5.1"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
log4rs = "1.3.0"
hocon = "0.9.0"
sha2 = "0.10.8"
base64 = "0.21.7"
hyper-tls = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = {version="0.4.34",default-features = false, features = ["alloc", "serde"]}
uuid = { version = "1.7.0", features = ["serde", "v4"] }
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4.0"
async-trait = "0.1.77"
image = "0.24.8"
dns-lookup = "2.0.4"
anyhow = "1.0.80"
moka = { version = "0.12.5", features = ["sync", "future"] }

# deps for db support
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
deadpool-postgres = "0.12.1"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
tokio-postgres = { version="0.7.10", features=["with-chrono-0_4"] }

# deps for aws
aws-config = { version= "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-rekognition = "1.15.0"
aws-sdk-s3 = "1.16.0"
aws-types = "1.1.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version="0.5.4", features=[ "background_threads_runtime_support", "background_threads"] }

[dev-dependencies]
rand = "0.8.5"

[profile.release]
lto = true

[features]
